@@ -3,6 +3,7 @@ New Features:
   - armor generator
   - character sheets v1.0
   - new svg logo
+  - digital delivery of charsheet handling with sendowl
 Changes:
   - nerf low level battery sizes in weapon generator
   - buff 2 handed weapons in weapon generator
